--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,7 +64,8 @@
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "typeinfo": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "unordered_set": "cpp"
   },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
